--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>摄影器材大全 - 专业摄影设备指南</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css服务/style.css">
     <!-- 同步第一版 Tailwind 颜色配置 -->
     <script>
         tailwind.config = {
